erDiagram
  USERS ||--o{ PROFILES : owns
  USERS }|--|| USERS_EMAIL_UNIQUE_IDX : enforces
  USERS }|--|| USERS_USERNAME_UNIQUE_IDX : enforces
  USERS ||--o{ REFRESH_TOKENS : "has sessions"
  PROFILES ||--o{ REFRESH_TOKENS : "active in"

  PROFILES ||--|| SETTINGS : has
  PROFILES ||--o{ TASKS : owns
  PROFILES ||--o{ NOTES : owns
  PROFILES ||--o{ HABITS : owns
  PROFILES ||--o{ HABIT_LOGS : owns
  PROFILES ||--o{ CALENDAR_EVENTS : owns
  PROFILES ||--o{ REMINDERS : owns
  PROFILES ||--o{ BIN_ENTRIES : owns

  TASKS ||--o{ NOTES : "converted from (nullable)"
  HABITS ||--o{ HABIT_LOGS : "logged daily"

  REMINDERS }o..o{ TASKS : "attaches to (entity_type/id, app-enforced)"
  REMINDERS }o..o{ HABITS : "attaches to (entity_type/id, app-enforced)"
  REMINDERS }o..o{ CALENDAR_EVENTS : "attaches to (entity_type/id, app-enforced)"
  REMINDERS }o..o{ NOTES : "attaches to (entity_type/id, app-enforced)"

  BIN_ENTRIES }o..o{ TASKS : "logs delete (app-enforced)"
  BIN_ENTRIES }o..o{ NOTES : "logs delete (app-enforced)"
  BIN_ENTRIES }o..o{ HABITS : "logs delete (app-enforced)"
  BIN_ENTRIES }o..o{ CALENDAR_EVENTS : "logs delete (app-enforced)"
  BIN_ENTRIES }o..o{ REMINDERS : "logs delete (app-enforced)"

  USERS {
    uuid id PK
    text email
    text username
    text password_hash
    timestamptz created_at
  }

  USERS_EMAIL_UNIQUE_IDX {
    unique_idx users_email_unique_idx
    text LOWER(email)
  }

  USERS_USERNAME_UNIQUE_IDX {
    unique_idx users_username_unique_idx
    text LOWER(username)
  }
  PROFILES {
    uuid id PK
    uuid user_id FK
    text name
    text color
    timestamptz created_at
  }
  REFRESH_TOKENS {
    uuid id PK
    uuid user_id FK
    uuid profile_id FK
    text token_hash
    timestamptz expires_at
    timestamptz revoked_at
    timestamptz created_at
  }
  SETTINGS {
    uuid profile_id PK
    text timezone
    text theme
    smallint week_starts_on
    timestamptz updated_at
  }
  TASKS {
    uuid id PK
    uuid profile_id FK
    text title
    text description
    text status
    boolean urgent
    boolean important
    timestamptz due_at
    timestamptz deleted_at
    timestamptz created_at
    timestamptz updated_at
  }
  NOTES {
    uuid id PK
    uuid profile_id FK
    text content
    text[] tags
    uuid converted_task_id FK
    timestamptz deleted_at
    timestamptz created_at
    timestamptz updated_at
  }
  HABITS {
    uuid id PK
    uuid profile_id FK
    text title
    smallint target_per_week
    timestamptz deleted_at
    timestamptz created_at
    timestamptz updated_at
  }
  HABIT_LOGS {
    uuid id PK
    uuid habit_id FK
    uuid profile_id FK
    date log_date
    boolean completed
    timestamptz created_at
  }
  CALENDAR_EVENTS {
    uuid id PK
    uuid profile_id FK
    text title
    timestamptz starts_at
    timestamptz ends_at
    text location
    timestamptz deleted_at
    timestamptz created_at
    timestamptz updated_at
  }
  REMINDERS {
    uuid id PK
    uuid profile_id FK
    text title
    timestamptz remind_at
    text entity_type
    uuid entity_id
    boolean is_done
    timestamptz deleted_at
    timestamptz created_at
    timestamptz updated_at
  }
  BIN_ENTRIES {
    uuid id PK
    uuid profile_id FK
    text entity_type
    uuid entity_id
    timestamptz deleted_at
    timestamptz auto_purge_at
  }